# voxio

./: Justfile  pyproject.toml
scripts/: img_paths.py  purge_artifacts.py
tests/: __init__.py  conftest.py  test_label_binary_image.py  utils.py
tests/augment/: test_label_binary_image.py
voxio/: clean.py  read.py  readers.py
voxio/augment/: label_binary_image.py
voxio/auxiliary/: caching.py  chunk_info.py
voxio/auxiliary/volume_info/: read.py  volume_info.py
voxio/clean/: single_big_obj_artifact_purge.py
voxio/scan/: state.py
voxio/utils/: io.py  misc.py  typings.py
